<resources>
    <string name="app_name">HTapp</string>
    <string name="app_descricao">High Tech Cursos</string>
    <string name="app_descricao_new">HIGH TECH</string>
    <string name="btn1">BUTTON 1</string>
    <string name="btn2">BUTTON 2</string>
    <string name="btn3">BUTTON 3</string>

    <string name="nome">Nome:</string>
    <string name="login">LOGIN:</string>
    <string name="senha">SENHA:</string>
    <string name="btn_entrar">ENTRAR:</string>
    <string name="app_button_confirme">CONNFIRMAR</string>

    <string name="app_cadastro">CADASTRO</string>
    <string name="app_cadastro_nome">Nome:</string>
    <string name="app_cadastro_idade">Idade:</string>
    <string name="app_cadastro_email">Email:</string>
    <string name="app_cadastro_senha">Senha:</string>
    <string name="app_cadastro_btn">Cadastrar</string>

    <string name="f_app_descricao">ACTIVITY F</string>
    <string name="f_tetxt">Escreva aqui</string>
    <string name="f_acessar">Ir para G</string>
    
    <string name="g_app_descricao">ACTIVITY G</string>
    <string name="g_acessar">Voltar para F</string>
    <string name="g_text"></string>

    <!-- Layout D-->
    <string name="list_name">Lista de Nomes</string>
    <string name="list_btn">Button</string>


    <string name="grid">Grid</string>
    <string name="grid_nome">Grid</string>
    <string name="grid_btn">Button</string>

    <string name="register">Registro Usuarios</string>
    <string name="register_nome">Seu Nome</string>
    <string name="register_email">Seu Email</string>
    <string name="register_idade">Idade</string>
    <string name="register_btn">Cadastrar</string>

    <string name="user_list_btn">Voltar</string>
</resources>


