<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/f_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/f_app_descricao"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/f_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:hint="@string/f_tetxt"/>

    <Button
        android:id="@+id/f_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/f_text"
        android:layout_alignRight="@+id/f_text"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/f_acessar"
        android:background="@android:color/holo_green_dark"
        android:textSize="20dp"/>

</RelativeLayout>