<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_descricao_new"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/login_resultado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:textSize="24dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="teste"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_above="@+id/login_login"/>

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/btn_plus"/>

    <EditText
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_senha"
        android:layout_alignLeft="@+id/login_senha"
        android:layout_alignRight="@+id/login_senha"
        android:textSize="24sp"
        android:text="@string/login"/>

    <EditText
        android:id="@+id/login_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:text="@string/senha"/>

    <Button
        android:id="@+id/login_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_senha"
        android:layout_alignLeft="@+id/login_senha"
        android:layout_alignRight="@+id/login_senha"
        android:layout_marginTop="24dp"
        android:text="@string/btn_entrar"
        android:background="@android:color/holo_green_dark"
        android:textSize="20dp"/>

</RelativeLayout>